# v4cat

./: README.md  bootstrap.py  catalogue.py  cells.py  framework_seed.sql  mcp_server.py  methodology.md  pyproject.toml  sandbox.py  tutorial.md  views.py
.github/workflows/: publish.yml  test.yml
cotype/: INDEX.md  audit_processor_bias.md  audit_workspace_2026_05_04.md  rfs_findings.md  rfs_findings_doc_discipline.md  rfs_findings_risc_projection.md  s2g_classifications.md  shadow_agda2v4cat_distribution.md  shadow_agda_extraction_gap_coverage.md  shadow_agda_extraction_gap_foreign.md  shadow_agda_extraction_gap_generalizable_vars.md  shadow_agda_extraction_gap_import_directives.md  shadow_agda_extraction_gap_mutual_blocks.md  shadow_agda_extraction_gap_pattern_synonyms.md  shadow_agda_extraction_gap_polarity.md  shadow_agda_extraction_gap_pragmas.md  shadow_agda_extraction_gap_termination.md  shadow_agda_extraction_gap_tier3.md  shadow_agda_extraction_gap_where_clauses.md  shadow_agda_ffi_gap.md  shadow_assertion_history_group.md  shadow_carrier_grid.md  shadow_cell.md  shadow_distribution_seam_mcp.md  shadow_doc_cleanup_01_theory_integration.md  shadow_doc_cleanup_02_methodology_reframe.md  shadow_doc_cleanup_03_tutorial_reorder.md  shadow_doc_cleanup_04_readme_overview.md  shadow_doc_cleanup_05_examples_minor.md  shadow_doc_cleanup_06_signposting.md  shadow_doc_cleanup_plan.md  shadow_doc_discipline.md  shadow_docs_quartet.md  shadow_dual_representation.md  shadow_event_log_gap.md  shadow_geometric_currying.md  shadow_geometric_currying_agda2v4cat_permissive.md  shadow_geometric_currying_certify_checks.md  shadow_geometric_currying_octave_role_matrices.md  shadow_geometric_currying_v4cat_refactor.md  (+29 more)
src/v4cat/: README.md  __init__.py  bootstrap.py  catalogue.py  cells.py  curry.py  event_cells.py  examples.md  framework_seed.sql  hosted_skill_usage.md  hosted_skills.md  mcp_server.py  mcp_setup.md  methodology.md  python_api.md  rigorous_use.md  schema.sql  theory.md  theory.py  tutorial.md  views.py
src/v4cat/tests/: test_branch_coverage.py  test_event_cells.py  test_geometric_currying_recognizers.py  test_geometric_currying_referents.py  test_geometric_currying_vocab.py  test_isa.py  test_mcp.py  test_path_isa.py  test_risc.py
tests/: test_branch_coverage.py  test_isa.py  test_mcp.py  test_sandbox.py  test_self_hosting.py
