[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v4cat"
version = "0.4.0"
description = "Symmetry-break cataloguing — ISA + SQLite schema + MCP server for accumulating named structural distinctions about a domain (Klein-four-equipped, self-hosting)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mike Mol", email = "mikemol@gmail.com" },
]
keywords = [
    "knowledge-graph",
    "mcp",
    "model-context-protocol",
    "structural-cataloguing",
    "klein-four",
    "yoneda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage    = "https://github.com/mikemol/v4cat"
Methodology = "https://github.com/mikemol/v4cat/blob/main/src/v4cat/methodology.md"
Source      = "https://github.com/mikemol/v4cat"
Issues      = "https://github.com/mikemol/v4cat/issues"

[project.scripts]
v4cat-mcp = "v4cat.mcp_server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
v4cat = ["*.sql", "*.md"]
