[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v4cat"
version = "0.5.0"
description = "Symmetry-break cataloguing — ISA + SQLite schema for accumulating named structural distinctions about a domain (Klein-four-equipped, self-hosting)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mike Mol", email = "mikemol@gmail.com" },
]
keywords = [
    "knowledge-graph",
    "structural-cataloguing",
    "klein-four",
    "yoneda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage    = "https://github.com/v4cat-oss/v4cat"
Methodology = "https://github.com/v4cat-oss/v4cat/blob/main/src/v4cat/methodology.md"
MCP-server  = "https://github.com/v4cat-oss/v4cat-mcp"
Source      = "https://github.com/v4cat-oss/v4cat"
Issues      = "https://github.com/v4cat-oss/v4cat/issues"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/v4cat/tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
v4cat = ["*.sql", "*.md"]
